# tool

./: .actrc  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  LICENSE  PROJECT_CONTEXT.md  README.md  TASK_TEMPLATE.md  app.js  biome.json  index.html  justfile  middleware.js  model_card.json  model_card.md  package-lock.json  package.json  playwright.config.mjs  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  release-manifest.json  release-manifest.sha256  styles.css  vercel.json
.ai/: architecture.md  code-review.md  decisions.md  known-issues.md  product.md
.codex/: CONTINUITY.md
.github/: dependabot.yml
api/: ai-research.js  health.js  maintenance.js  market-data.js  merge-pdf.js  pdf-to-word.js  split-pdf.js  version.js  word-to-pdf.js
config/: feature_catalog.json  five_day_mvp.toml  github-actions-pins.json  quality-tools.env
docs/: AI-RESEARCH.md  API-AUDIT.md  BACKEND.md  LIVE-DATA-AUDIT.md  METHODOLOGY.md  V19-DELIVERY.md  V20-DB-FIRST-VERIFY.md  V20-DELIVERY.md  api_sources.md  architecture.md  benchmark_import.md  corporate_action_import.md  current-status.md  data-model.md  data_import.md  decision-policy-evidence-release.md  decision-policy-required-evidence.md  delisting_registry_import.md  historical_calendar_import.md  historical_daily_bar_landing.md  local-development-tools.md  manual-full-update.md  p0-repair-report-2026-07-20.md  p1-repair-report-2026-07-20.md  p2-repair-report-2026-07-21.md  prediction_api_contract.md  product-ui.md  r2-historical-archive.md  release-state.md  security.md  security_snapshot_import.md  tooling-release.md
public/: admin.html  admin.js  app.js  index.html  maintenance.html  manifest.webmanifest  patch.js  smart.js  styles.css  sw.js  v20.js
scripts/: __init__.py  _bootstrap.py  _build_venue_research_feature_dataset.py  admin-observability-test.mjs  admin-role-test.mjs  ai-api-test.mjs  ai-research-test.mjs  audit-live.mjs  audit_historical_dataset_readiness.py  audit_historical_r2_archive.py  backend-pipeline-test.mjs  backend-store-test.mjs  backfill_finmind_historical_evidence.py  backfill_fugle_adjusted.py  backfill_historical_benchmark.py  backfill_historical_daily_bars.py  backfill_historical_supplemental.py  backfill_taiex_monthly_ohlc.py  backfill_tpex_monthly_ohlc.py  backtest-snapshots.mjs  backtest.py  build.mjs  build.sh  build_tpex_daily_feature_delta.py  build_tpex_prepared_research_dataset.py  build_tpex_research_feature_dataset.py  build_twse_prepared_research_dataset.py  build_twse_research_feature_dataset.py  build_twse_trading_calendar_snapshot.py  check_agents_length.py  check_data_apis.py  check_github_action_pins.py  check_local_tools.ps1  check_migration_contracts.py  check_python_lock_contract.py  check_vercel_headers.py  daily-market-report-test.mjs  deep-data-test.mjs  deployment-provenance-test.mjs  (+59 more)
(+876 files in other folders)
