[build-system]
requires = ["setuptools>=69,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-lens-five-day-mvp"
version = "0.1.0"
description = "Point-in-time Taiwan equity five-trading-day ranking research pipeline"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3,<2",
  "lightgbm>=4.0,<5",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "truststore>=0.10,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
