[build-system]
requires = ["setuptools>=69,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-lens-five-day-mvp"
version = "0.1.0"
description = "Point-in-time Taiwan equity five-trading-day ranking research pipeline"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35,<2",
  "joblib>=1.3,<2",
  "lightgbm>=4.0,<5",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<24",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "truststore>=0.10,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "pytest-xdist>=3.8,<4",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --maxprocesses=4 --dist=loadfile"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
