[build-system]
requires = ["setuptools>=69,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-lens-five-day-mvp"
version = "0.1.0"
description = "Point-in-time Taiwan equity five-trading-day ranking research pipeline"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35,<2",
  "joblib>=1.3,<2",
  "lightgbm>=4.0,<5",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<24",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "truststore>=0.10,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "pytest-xdist>=3.8,<4",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers -n auto --maxprocesses=4 --dist=loadfile"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".git",
  ".venv",
  "artifacts",
  "data",
  "playwright-report",
  "src/vendor",
]

[tool.ruff.lint]
# Gate correctness failures first; broader style cleanup remains a separate migration.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
